2015-05-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (WriteTIFFImage): Disable matte channel for
	compression types which don't support it.  Resolves SourceForge
	bug #297 "GM distorts image using -transform".
	(WriteTIFFImage): When type is Optimize, disable matte channel if
	image is opaque.

2015-05-09  Jaroslav Fojtik  <JaFojtik@seznam.cz>

	* webp/src/utils/endian_inl.h: Fixed defect in intrinsic function
	byteswap_ulong for Visual Studio less than 2005.

2015-05-08  Jaroslav Fojtik  <JaFojtik@seznam.cz>

	* VisualMagick/configure/system_page.cpp,
	VisualMagick/configure/system_page.h: Suppress reloading .vcproj
	when configuration type does not change.

2015-05-08  Jaroslav Fojtik  <JaFojtik@seznam.cz>

	* VisualMagick/configure/system_page.cpp,
	VisualMagick/configure/system_page.h,
	VisualMagick/configure/target_page.h: Ability to re-use already
	given paths. It is highly frustrating to enter path for different
	configurations again and again.

2015-05-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/vid.c (ReadVIDImage): Fix use of uninitialized variable
	reported by MSVC 2003 (but not GCC, Clang, or Coverity).

2015-05-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/miff.c (ReadMIFFImage): Fix possible leak of profiles in
	error path.

	* coders/mpc.c (ReadMPCImage): Fix memory leak of values
	allocation.
	(ReadMPCImage): Fix possible leak of profiles in error path. Fixes
	Coverity 80697 "Resource leak".

2015-05-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/miff.c (ReadMIFFImage): Fix memory leak of values
	allocation.

2015-05-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/dpx.c (ReadDPXImage): Hopefully quiet Coverity 10305
	"Untrusted loop bound".

	* coders/tga.c (ReadTGAImage): Hopefully quiet Coverity 53418
	"Untrusted loop bound".

	* magick/tempfile.c (AcquireTemporaryFileDescriptor): Eliminate
	all use of operating system provided temporary file allocation